--- a/portfolio1/src/Styles/Header.css
+++ b/portfolio1/src/Styles/Header.css
@@ -10,10 +10,10 @@ body, h1, h2, a{
     margin-top: 10px;
     font-family: 'Monoton';
     color: #e1e0bf;
-    background-color: #252323;
-    border-radius: 10px;
+    background-color: rgb(37 35 35 / 60%);
+    border-radius: 3px;
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-    width: 60%;
+    width: 80%;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -54,9 +54,9 @@ body, h1, h2, a{
     z-index: 1;
     position: relative;
     display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100%;
+    justify-content: center;
+    padding-top: 3px;
     min-width: 50px;
     width: 15%;
     transition: 0.3s;
