--- a/portfolio1/src/index.css
+++ b/portfolio1/src/index.css
@@ -1,16 +1,11 @@
-.beka {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@font-face {
+  font-family: 'Poppins';
+  src: url('./Fonts/Poppins-Regular.ttf') format('truetype');
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Poppins-Bold';
+  src: url('./Fonts/Poppins-Bold.ttf') format('truetype');
 }
 
 a {
@@ -44,15 +39,16 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: 0.25s;
+  box-shadow: 2px 2px 10px 1px black;
+
 }
 button:hover {
   border-color: #646cff;
+  transform: scale(1.1);
+  transition: 0.25s;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
 
 @media (prefers-color-scheme: light) {
   :root {
