--- a/portfolio1/src/App.css
+++ b/portfolio1/src/App.css
@@ -1,12 +1,5 @@
-Background{
-  position: absolute;
-}
-.App1 {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
+@font-face {
+
 }
 .Container{
   display: flex;
@@ -27,7 +20,7 @@ Background{
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #111111;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
