--- a/portfolio1/src/Styles/Grid1.css
+++ b/portfolio1/src/Styles/Grid1.css
@@ -10,55 +10,104 @@ body{
 }
 
 .grid-container{
-
+    font-family: 'Poppins';
     padding-top: 20px;
     display: grid;
     grid-template-columns: calc(24% - 10px) calc(24% - 10px) calc(25% - 10px) calc(25% - 10px);
+    grid-template-rows: calc(50% - 15px) calc(50% - 15px);
     gap: 20px;
     width: 80%;
     height: calc(86vh - 20px);
     transition: 0.7s;
+    & h1{
+        background-image: linear-gradient(to bottom right, red , rebeccapurple);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+    & h2{
+        background-image: linear-gradient(to bottom right, #dcc2c2, rgb(203, 116, 116));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 }
 .grid-item{
     width: 100%;
-    background-color: rgb(37 35 35 / 60%);
+    /*background-color: rgba(37, 33, 33, 0.6);*/
     border-radius: 5px;
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
     height: 100%;
 }
-
-.left-item{
-    color: #e1e0bf;
+.about-section{
+    width:90%;
     display: flex;
+
+}
+
+hr {
+    width: 80%;
+    background-image: linear-gradient(to right, rgba(255, 0, 0, 0.78), rgba(102, 51, 153, 0.8));
+    height: 1px;
+    border: none;
+}
+.button-container{
+    width: 100%;
+    display: flex;
+
+    justify-content: center;
+}
+.left-item{
+    animation: 1s ease-out 1s 1 LoadContent;
+    color: #d7cbd4;
+    display: flex;
+    align-items: center;
     flex-direction: column;
     grid-row: 1 / span 2;
     grid-column: 1 / span 2;
+    & .about-section{
+        height: 15%;
+    }
+    & .list-container{
+        height: 65%;
+        background-color: white;
+    }
     & h1 {
         max-width: 500px;
         width: auto;
-        font-family: 'Monoton';
-        font-size: 2em;
-        padding: 30px;
+        font-size: 2.5rem;
+        padding: 20px 20px 10px 20px;
     }
     & h2{
-        font-family: 'Rubik';
         font-size: 1.3em;
         padding: 0 45px 45px 45px ;
-        color: #e1e0bf;
+        color: white;
         float: left;
     }
 }
-
 .right-top-item1{
+    & h1{
 
+        font-size: 2rem;
+        padding: 10px 10px 0px 20px;
+    }
+    color: white;
 }
 
 .right-bottom-item{
     grid-column: 3 / span 2;
 }
+.grid-button{
+    font-family: 'Poppins-Bold';
+    background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.78), rgba(102, 51, 153, 0.8));
+    color: white;
+    width: 80%;
+    :hover{
+        transform: scale(1.1);
+    }
+}
 
 @media (max-width: 768px) {
     .grid-container{
+        height: auto;
         transition: 0.7s;
         width: 95%;
         display: flex;
@@ -66,6 +115,26 @@ body{
     }
     .grid-item{
         width: 100%;
-        height: 800px;
+        height: auto;
     }
+    .button-container{
+        padding-bottom: 20px;
+    }
+    hr{
+        width: 90%;
+
+    }
+}
+
+@keyframes LoadContent {
+    0%{
+        animation-delay: 1s;
+        transform: translateX(+500px);
+        visibility: hidden;
+    }
+    100%{
+        transform: translateX(0);
+        visibility: visible;
+    }
+
 }
