--- a/portfolio1/src/Styles/Grid2.css
+++ b/portfolio1/src/Styles/Grid2.css
@@ -30,20 +30,20 @@ body{
 
 .main-item{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Poppins';
     padding-top: 15px;
     height: auto;
     grid-row: 1;
     grid-column: 1 / span 4;
     & h1 {
-        height: 100%;
-        width: 100%;
-        color: #e1e0bf;
-        font-size: 3vw;
+        height: auto;
+        font-size: 2.5rem;
         text-align: center;
-    }
-    & h2{
-        max-width: 500px;
-        float: left;
+        background-image: linear-gradient(to bottom right, red , rebeccapurple);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
 }
 .left-top-item{
@@ -63,13 +63,13 @@ body{
 }
 
 @media (max-width: 768px) {
-    .grid-container{
+    .grid2-container{
         transition: 0.7s;
         width: 95%;
         display: flex;
         flex-direction: column;
     }
-    .grid-item{
+    .grid2-item{
         width: 100%;
         height: 800px;
     }
