--- a/portfolio1/src/Styles/Header.css
+++ b/portfolio1/src/Styles/Header.css
@@ -6,10 +6,11 @@ body, h1, h2, a{
 }
 
 .header-container{
-    animation: 1.3s ease-out 0.5s 1 Load;
+    visibility: hidden;
+    font-family: 'Poppins';
+    animation: 1.3s ease-out 0.5s 1 Load forwards;
     height: calc(14vh - 20px);
     margin-top: 10px;
-    font-family: 'Poppins';
     color: #d7cbd4;
     /*background-color: rgba(37, 33, 33, 0.6);*/
     border-radius: 3px;
@@ -48,7 +49,7 @@ body, h1, h2, a{
 
 .header-socials-links{
     width: 30%;
-    height: 80%;
+    height: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -63,8 +64,9 @@ body, h1, h2, a{
     height: 100%;
     justify-content: center;
     padding-top: 3px;
-    min-width: 50px;
+    min-width: 60px;
     width: 15%;
+    max-width: 70px;
     transition: 0.3s;
     & img{
         width: 100%;
@@ -79,7 +81,7 @@ body, h1, h2, a{
         height: 80%;
         width: 100%;
         z-index: -1;
-        border-radius: 10px;
+        border-radius: 13px;
         background-image: linear-gradient(to bottom right, red , rebeccapurple);
     }
 }
@@ -114,8 +116,10 @@ body, h1, h2, a{
     0%{
         opacity: 0%;
         width: 50%;
+        animation-delay: 1s;
     }
     100%{
         width: 90%;
+        visibility: visible;
     }
 }
