--- a/portfolio1/src/Styles/Grid1.css
+++ b/portfolio1/src/Styles/Grid1.css
@@ -13,11 +13,11 @@ body{
     font-family: 'Poppins';
     padding-top: 20px;
     display: grid;
-    grid-template-columns: calc(24% - 10px) calc(24% - 10px) calc(25% - 10px) calc(25% - 10px);
-    grid-template-rows: calc(50% - 15px) calc(50% - 15px);
-    gap: 20px;
     width: 80%;
-    height: calc(86vh - 20px);
+    grid-template-columns: calc(24% - 10px) calc(24% - 10px);
+    grid-template-rows: calc(50% - 15px) calc(25% - 7px) calc(25% - 8px);
+    gap: 20px;
+    height: calc((86vh - 20px) * 2);
     transition: 0.7s;
     & h1{
         background-image: linear-gradient(to bottom right, red , rebeccapurple);
@@ -31,11 +31,13 @@ body{
     }
 }
 .grid-item{
+
     width: 100%;
     /*background-color: rgba(37, 33, 33, 0.6);*/
-    border-radius: 5px;
-    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
     height: 100%;
+    & h2{
+        overflow: hidden;
+    }
 }
 .about-section{
     width:90%;
@@ -44,7 +46,7 @@ body{
 }
 
 hr {
-    width: 80%;
+    width: 90%;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0.78), rgba(102, 51, 153, 0.8));
     height: 1px;
     border: none;
@@ -62,7 +64,7 @@ hr {
     display: flex;
     align-items: center;
     flex-direction: column;
-    grid-row: 1 / span 2;
+    grid-row: 1 / span 1;
     grid-column: 1 / span 2;
     & .about-section{
         height: 10%;
@@ -85,16 +87,29 @@ hr {
     }
 }
 .right-top-item1{
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
     & h1{
-
-        font-size: 2rem;
-        padding: 10px 10px 0px 20px;
+        font-size: 2.5rem;
+        padding: 10px 10px 0 20px;
     }
+    font-size: 1.3rem;
     color: white;
+}
+.right-top-item2{
+    & h1{
+        font-size: 2.5rem;
+        padding: 10px 10px 0 20px;
+    }
+    font-size: 1.3rem;
+    color: white;
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
 }
 
 .right-bottom-item{
-    grid-column: 3 / span 2;
+    grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
 }
 .grid-button{
     font-family: 'Poppins-Bold';
@@ -105,14 +120,41 @@ hr {
         transform: scale(1.1);
     }
 }
-@media (min-width: 1500px){
+@media (min-width: 1700px){
+    .grid-container{
+        height: calc(86vh - 20px);
+        width: 80%;
+        grid-template-columns: calc(24% - 10px) calc(24% - 10px);
+        grid-template-rows: calc(50% - 15px) calc(50% - 15px);
+    }
+    .right-top-item1{
+        grid-column: 2 / span 1;
+        grid-row: 2 / span 1;
+        font-size: 1.5rem;
+        .button-container{
+
+
+        }
+    }
+    .right-top-item2{
+        grid-column: 1 / span 1;
+        grid-row: 2 / span 1;
+    }
+    .right-bottom-item{
+        visibility: hidden;
+    }
     .left-item{
+        .about-section{
+            height: auto;
+        }
+        grid-row: 1 / span 1;
+        grid-column: 1 / span 2;
         & h2{
-            font-size: 2rem;
+            font-size: 1.5rem;
         }
         & button {
-
-            bottom: 10px;
+            bottom: 15px;
+            position: absolute;
             font-size: 1.4rem;
         }
     }
