--- a/portfolio1/src/Styles/Grid1.css
+++ b/portfolio1/src/Styles/Grid1.css
@@ -54,7 +54,6 @@ hr {
 .button-container{
     width: 100%;
     display: flex;
-
     justify-content: center;
 }
 .left-item{
@@ -67,7 +66,7 @@ hr {
     grid-row: 1 / span 1;
     grid-column: 1 / span 2;
     & .about-section{
-        height: 10%;
+        height: auto;
     }
     & .list-container{
         height: 65%;
@@ -128,18 +127,12 @@ hr {
         grid-template-rows: calc(50% - 15px) calc(50% - 15px);
     }
     .right-top-item1{
-        grid-column: 2 / span 1;
-        grid-row: 2 / span 1;
         font-size: 1.5rem;
-        .button-container{
-
-
-        }
     }
     .right-top-item2{
-        grid-column: 1 / span 1;
-        grid-row: 2 / span 1;
+        font-size: 1.5rem;
     }
+
     .right-bottom-item{
         visibility: hidden;
     }
@@ -150,7 +143,7 @@ hr {
         grid-row: 1 / span 1;
         grid-column: 1 / span 2;
         & h2{
-            font-size: 1.5rem;
+            font-size: 1.4rem;
         }
         & button {
             bottom: 15px;
@@ -166,6 +159,16 @@ hr {
         width: 95%;
         display: flex;
         flex-direction: column;
+    }
+    .left-item{
+        & h1{
+            padding: 10px;
+            margin: 0;
+        }
+        & h2{
+            padding: 0 20px 20px 20px;
+
+        }
     }
     .grid-item{
         width: 100%;
