--- a/portfolio1/src/Styles/Grid1.css
+++ b/portfolio1/src/Styles/Grid1.css
@@ -14,7 +14,7 @@ body{
     padding-top: 20px;
     display: grid;
     width: 80%;
-    grid-template-columns: calc(24% - 10px) calc(24% - 10px);
+    grid-template-columns: calc(30% - 10px) calc(30% - 10px);
     grid-template-rows: calc(50% - 15px) calc(25% - 7px) calc(25% - 8px);
     gap: 20px;
     height: calc((86vh - 20px) * 2);
@@ -123,7 +123,7 @@ hr {
     .grid-container{
         height: calc(86vh - 20px);
         width: 80%;
-        grid-template-columns: calc(24% - 10px) calc(24% - 10px);
+        grid-template-columns: calc(30% - 10px) calc(30% - 10px);
         grid-template-rows: calc(50% - 15px) calc(50% - 15px);
     }
     .right-top-item1{
@@ -161,18 +161,21 @@ hr {
         flex-direction: column;
     }
     .left-item{
+        background-color: white;
+        height: calc(82vh - 20px);
         & h1{
             padding: 10px;
             margin: 0;
         }
         & h2{
+            font-size-adjust: fill;
             padding: 0 20px 20px 20px;
 
         }
     }
     .grid-item{
         width: 100%;
-        height: auto;
+
     }
     .button-container{
         padding-bottom: 20px;
