--- a/portfolio1/src/Styles/Grid2.css
+++ b/portfolio1/src/Styles/Grid2.css
@@ -47,12 +47,12 @@ body{
     }
 }
 .left-top-item{
-    grid-row: 2 / span 4;
-    grid-column: 1;
+    grid-row: 2 / span 2;
+    grid-column: 1 / span 2;
 }
-.right-item{
-    grid-row: 2 / span 4;
-    grid-column: 2 / span 3;
+.right-top-item{
+    grid-row: 2 / span 2;
+    grid-column: 3 / span 2;
 }
 .right-top-item1{
 
@@ -60,6 +60,7 @@ body{
 
 .right-bottom-item{
     grid-column: 3 / span 2;
+    grid-row: 3 / span 2;
 }
 
 @media (max-width: 768px) {
