--- a/portfolio1/src/Styles/Header.css
+++ b/portfolio1/src/Styles/Header.css
@@ -10,11 +10,8 @@ body, h1, h2, a{
     font-family: 'Poppins';
     animation: 1.3s ease-out 0.5s 1 Load forwards;
     height: calc(18vh - 20px);
-    margin-top: 10px;
+    margin-top: 30px;
     color: #d7cbd4;
-    /*background-color: rgba(37, 33, 33, 0.6);*/
-    border-radius: 3px;
-    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
     width: 90%;
     align-items: center;
     justify-content: center;
@@ -28,11 +25,21 @@ body, h1, h2, a{
     }
 }
 .header-photo{
-    width: 10%;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    height: 90%;
+    overflow: hidden;
+    border-radius: 10px;
+    & img{
+        width: 150px;
+        overflow: hidden;
+    }
 }
 .header-name{
-    width: 70%;
+    margin: 70px;
+    width: 65%;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -56,6 +63,11 @@ body, h1, h2, a{
 
     .header-photo{
         width: 20%;
+        overflow: hidden;
+        & img{
+            height: 50px;
+            width: 100%;
+        }
     }
     .header-name{
         width: 60%;
