--- a/portfolio1/src/App.css
+++ b/portfolio1/src/App.css
@@ -1,9 +1,14 @@
+body{
+  margin: 0;
+  padding: 0;
+}
 .Container{
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-
+  padding: 0;
+  margin: 0;
 }
 
 
