--- a/portfolio1/src/Styles/AboutSection.css
+++ b/portfolio1/src/Styles/AboutSection.css
@@ -144,6 +144,7 @@ hr {
         flex-direction: column;
     }
     .left-item{
+        min-width: 0;
         padding: 0;
         margin: 0;
         height: calc(82vh - 20px);
