--- a/portfolio1/src/Styles/ProjectSection.css
+++ b/portfolio1/src/Styles/ProjectSection.css
@@ -10,21 +10,44 @@ body{
 }
 
 .grid2-container{
-    padding-top:20px;
+
+    margin:20px 0 20px 0;
     display: grid;
-    grid-template-columns: calc(24% - 10px) calc(24% - 10px) calc(25% - 10px) calc(25% - 10px);
-    grid-template-rows: 12% 20% 20%;
-    gap: 20px;
-    width: 80%;
+    grid-template-columns: calc(22% - 10px) calc(22% - 10px) calc(22% - 10px) calc(22% - 10px);
+    grid-template-rows: 10% 20% 15% 20% 15%;
+    gap: 40px;
+    width: 75%;
     height: calc(100vh - 20px);
     transition: 0.7s;
 }
+.photo-item{
+    opacity: 0;
+    animation: 1s ease-out 1s 1 LoadLeftContent forwards;
+    transition: 0.4s;
+    & a{
+        height: 100%;
+        width: 100%;
+    }
+}
+.text-item{
+    opacity: 0;
+    animation: 1s ease-out 1s 1 LoadRightContent forwards;
+    & hr{
+        width: 95%;
+
+    }
+}
 .photo-item:hover{
-    transform: scale(1.1);
-    transition: 0.3s;
+    background-color: black;
+    transform: scale(2);
+    transition: 0.4s;
     cursor: pointer;
 }
 .grid2-item{
+    gap: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     color: white;
     width: 100%;
     border-radius: 5px;
@@ -36,11 +59,14 @@ body{
         background-image: linear-gradient(to bottom right, red , rebeccapurple);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-size: 2.8rem;
+        font-size: 2.4rem;
         padding: 20px 20px 0 20px;
     }
     & h2{
-        font-size: 1rem;
+        background-image: linear-gradient(to bottom right, #dcc2c2, rgb(203, 116, 116));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: 1.7rem;
         padding: 20px;
     }
     & button{
@@ -67,7 +93,7 @@ body{
     grid-column: 1 / span 4;
     & h1 {
         height: auto;
-        font-size: 2.5rem;
+        font-size: 2.8rem;
         text-align: center;
         background-image: linear-gradient(to bottom right, red , rebeccapurple);
         -webkit-background-clip: text;
@@ -85,6 +111,8 @@ body{
     grid-column: 3 / span 2;
 }
 .left-bottom-item{
+    background-image: url('../Images/clinica.png');
+    background-size: cover;
     grid-row: 4 / span 2;
     grid-column: 1 / span 2;
 
@@ -97,13 +125,42 @@ body{
 
 @media (max-width: 768px) {
     .grid2-container{
+        height: auto;
         transition: 0.7s;
         width: 95%;
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
     .grid2-item{
-        width: 100%;
-        height: 800px;
+        width: 90%;
+        height: 500px;
     }
+    .text-item{
+        justify-content: flex-start;
+    }
+}
+
+@keyframes LoadLeftContent {
+    0%{
+        animation-delay: 1s;
+        transform: translateX(-300px);
+    }
+    100%{
+        transform: translateX(0);
+        opacity: 100%;
+    }
+
+}
+
+@keyframes LoadRightContent {
+    0%{
+        animation-delay: 1s;
+        transform: translateX(+300px);
+    }
+    100%{
+        transform: translateX(0);
+        opacity: 100%;
+    }
+
 }
