--- a/portfolio1/src/index.css
+++ b/portfolio1/src/index.css
@@ -35,9 +35,13 @@ button {
   transition: 0.25s;
   box-shadow: 2px 2px 10px 1px black;
 
+
 }
 button:hover {
+  background-position: bottom right;
   transform: scale(1.1);
+  transform: translate3d(0%, -20%, 20px) scale(1.1);
   transition: 0.25s;
+
 }
 
