--- a/portfolio1/src/Styles/ContactSection.css
+++ b/portfolio1/src/Styles/ContactSection.css
@@ -1,4 +1,5 @@
 .contact-section-container{
+    margin-top: 60px;
     font-family: Poppins;
     display: flex;
     flex-direction: column;
@@ -6,6 +7,11 @@
     &ul{
         list-style-type: none;
     }
+}
+h4{
+    background-image: linear-gradient(to bottom right, red , rebeccapurple);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .contact-me{
     display: flex;
@@ -40,24 +46,60 @@
     background-color: #1a1a1a;
 }
 .social-links{
+    margin-top: 50px;
+    margin-bottom: 40px;
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .social-links-list{
     padding: 0;
-    list-style-type: none;
-    justify-content: space-around;
-    width: 100%;
+    width: 30%;
+    height: auto;
     display: flex;
     flex-direction: row;
-    & img{
-        height: 10vw;
-        width: 10vw;
-    }
+    align-items: center;
+    justify-content: space-evenly;
+    background-clip: content-box;
+    transition: 0.2s;
     & li {
-
+        list-style: none;
+    }
+}
+.social-link{
+    z-index: 1;
+    position: relative;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    padding-top: 3px;
+    min-width: 60px;
+    width: 15%;
+    max-width: 70px;
+    transition: 0.3s;
+    & img{
+        width: 100%;
+    }
+    & :hover{
+        transform: scale(1.1);
+        transition: 0.3s;
+    }
+    & ::before{
+        content: "";
+        height: 80%;
+        width: 100%;
+        z-index: -1;
+        border-radius: 13px;
+        background-image: linear-gradient(to bottom right, red , rebeccapurple);
     }
 }
 @media(max-width: 768px){
+    .social-links-list{
+        width: 60%;
+        transition: 0.2s;
+    }
     .form-container{
         flex-direction: column;
     }
