--- a/portfolio1/src/Styles/ProjectSection.css
+++ b/portfolio1/src/Styles/ProjectSection.css
@@ -11,7 +11,7 @@ body{
 
 .grid2-container{
 
-    margin:20px 0 20px 0;
+    margin:0 0 40px 0;
     display: grid;
     grid-template-columns: calc(22% - 10px) calc(22% - 10px) calc(22% - 10px) calc(22% - 10px);
     grid-template-rows: 10% 20% 15% 20% 15%;
@@ -66,15 +66,15 @@ body{
         background-image: linear-gradient(to bottom right, #dcc2c2, rgb(203, 116, 116));
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-size: 1.7rem;
-        padding: 20px;
+        font-size: 1.2rem;
+        padding: 15px;
     }
     & button{
         margin-left: 20px;
         font-family: 'Poppins-Bold';
         background-image: linear-gradient(to bottom right, rgba(255, 0, 0, 0.78), rgba(102, 51, 153, 0.8));
         color: white;
-        width: 30%;
+        width: 50%;
     }
     & a{
         text-decoration: none;
