--- a/portfolio1/src/Styles/MailForm.css
+++ b/portfolio1/src/Styles/MailForm.css
@@ -1,26 +1,22 @@
 .form {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    & input{
-        width: 100%;
-        border-radius: 20px;
-    }
     & h1{
         background-image: linear-gradient(to bottom right, red , rebeccapurple);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-size: 1.3rem;
-        padding: 20px 20px 20px 20px;
+        padding: 20px 20px 5px 10px;
     }
 }
 .input{
     width: 60%;
-    border-radius: 50px;
+
 }
 label {
     display: block;
@@ -29,21 +25,31 @@ label {
 
 input,
 textarea {
+    font-size: 1rem;
+    min-height: 45px;
+    font-family: Poppins;
+    background-color: #504c4c;
+    color: white;
     width: 100%;
+    max-width: 100%;
+    min-width: 100%;
     padding: 8px;
     margin-bottom: 16px;
     box-sizing: border-box;
+    border: none;
+    box-shadow: inset 0 0 7px black;
+    border-radius: 6px;
 }
 
-button {
-    background-color: #4caf50;
+.submit-button {
+    font-weight: bold;
+    font-size: 1.2rem;
+    background: linear-gradient(to bottom right, red , rebeccapurple);;
     color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    width: 60%;
 }
 
-button:hover {
-    background-color: #45a049;
-}
