--- a/portfolio1/src/index.css
+++ b/portfolio1/src/index.css
@@ -12,6 +12,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -24,8 +25,8 @@ h1 {
 }
 
 button {
+  border: none;
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1rem;
   font-weight: 500;
@@ -40,8 +41,9 @@ button {
 button:hover {
   background-position: bottom right;
   transform: scale(1.1);
-  transform: translate3d(0%, -20%, 20px) scale(1.1);
   transition: 0.25s;
-
 }
 
+button:active{
+  box-shadow: inset 0 0 10px black;
+}
