--- a/portfolio1/src/Styles/AboutSection.css
+++ b/portfolio1/src/Styles/AboutSection.css
@@ -10,10 +10,12 @@ body{
 }
 
 .grid-container{
+    justify-content: center;
+    margin: 15px;
     font-family: 'Poppins';
     padding-top: 20px;
     display: grid;
-    width: 80%;
+    width: 75vw;
     min-height: 450px;
     grid-template-columns: calc(30% - 10px) calc(30% - 10px);
     grid-template-rows: 100% 0 0;
@@ -69,7 +71,9 @@ hr {
     }
 }
 .left-item{
-    opacity: 0;
+    background-color: rgba(67, 67, 67, 0.1);
+    backdrop-filter: blur(3px);
+    border-radius: 10px;
     animation: 1s ease-out 1s 1 LoadContent forwards;
     color: #d7cbd4;
     display: flex;
