--- a/portfolio1/src/Styles/MailForm.css
+++ b/portfolio1/src/Styles/MailForm.css
@@ -40,6 +40,9 @@ textarea {
     box-shadow: inset 0 0 7px black;
     border-radius: 6px;
 }
+textarea{
+    height: 170px;
+}
 
 .submit-button {
     font-weight: bold;
@@ -47,6 +50,7 @@ textarea {
     background: linear-gradient(to bottom right, red , rebeccapurple);;
     color: white;
     padding: 10px 15px;
+    margin: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
